tests/errors/compiler/empty_bound_without_init/old_test_3.c
void main()
{
	// int err[];
	// int one[1];
	// int dyn[] = { 1, 2 };
	// int stat[2] = { 1, 2 };
	struct students { char names[]; };
}
